- [NEW] - Awards - Added SOTA/POTA/WWFF (@aa5sh)
- [NEW] - Awards - Added Not-Worked Filter
- [NEW] - New Contact - Added Long Path Azimuth info
- [NEW] - POTA Fields allow a comma-delimited list of one or more POTA Refs
- [NEW] - WSJTX tunes freq/mode like Rig if rig is disconnected
- [CHANGED] - Alert Widget is a Dock Widget (issue #399)
- [CHANGED] - File Open dialogs are not a native dialog under Linux (issue #427)
- [CHANGED] - Profiles transferred to DB
- [CHANGED] - LOV last_dates transferred to DB
- [REMOVED] - Setting DXCC Date
- Fix for MacOS Layout Geometry Restore (@aa5sh)
- Fixed TQSL does not block GUI thread
- Fixed MacOS build process (@aa5sh)

2024/07/26 - 0.37.2
- Fixed Field QSL Send Via should be retained (issue #413)
- Fixed Set rotator position fails if azimuth > 180 (issue #417)
- Fixed Windows State/Size does not save in case of fullscreen (issue #418)
- Fixed Significant rounding during azimuth calculation (issue #422)
- Updated Simplified Chinese translation
- Updated Spanish translaction
- Added Italian translation (thx IK1VQY)

2024/07/10 - 0.37.1
- Fixed QSO Table Callsign filter is not filled properly (issue #401)
- Fixed DXC zero frequency for last QSO in case of FT8 QSOs (issue #404)
- Fixed Callsign Context Menu does not work (issue #409)
- Fixed QSO Detail Save and Edit buttons are not translated (issue #410)

2024/07/01 - 0.37.0
- [NEW] - Added Shortcuts Editor (issue #293)
- [NEW] - Added QO100 Bandplan to correctly categorize the DX Spots
- [NEW] - Improveded detection of SH/DX SHF Spots
- [NEW] - Online Map - Added WSJTX CQ Spots
- [NEW] - WSJTX - Sortable View
- [NEW] - Alerts - Sortable View
- [NEW] - Added Spanish translation (thx LU1IDC)
- [NEW[ - Added Search Callsign Clear Button (issue #396)
- [CHANGED] - QRZ auth should be over POST with form data (issue #389)
- [CHANGED] - Big CTY file is used
- [CHANGED] - Callbook Country DXCC ID is used in case of difference from Big CTY