@@ -10,6 +10,7 @@ TBC - 0.38.0
 - [NEW] - POTA Fields allow a comma-delimited list of one or more POTA Refs
 - [NEW] - WSJTX tunes freq/mode like Rig if rig is disconnected
 - [CHANGED] - Alert Widget is a Dock Widget (issue #399)
+- [CHANGED] - QLog adds more information from callbook for WSJTX QSOs (issues #403 #405 #420)
 - [CHANGED] - File Open dialogs are not a native dialog under Linux (issue #427)
 - [CHANGED] - Profiles transferred to DB
 - [CHANGED] - LOV last_dates transferred to DB
